fix: overflowing links

--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,10 @@ html {
     font-size: 100%;
 }
 
+a {
+  overflow-wrap: break-word;
+}
+
 @media (min-width: 1024px) {
     html {
         font-size: 120%;
